# thesunset

./: .gitignore  LICENSE  README.md  SunsetDetector.py  image_capture.py  package-lock.json  package.json  pyproject.toml  startup.sh  utils.py
api/: app.py
app/: package-lock.json  package.json  vite.config.ts
app/src/: app.css
app/src/lib/: utils.ts
app/src/lib/components/: Header.svelte  Highlights.svelte
app/src/routes/: +page.svelte
app/src/routes/about/: +page.svelte
detector/: SunsetDetector.py  image_capture.py  logger.py  pyproject.toml  requirements.txt  scheduler.py  scores.json  utils.py
src/: app.css
src/lib/: datapicker.ts  store.ts  utils.ts
src/lib/components/: Calendar.svelte  Graph.svelte  Highlights.svelte
src/routes/: +page.svelte
src/routes/about/: +page.svelte
tmp/2025-06-23/: metadata.json
